--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,5 @@
 <resources>
   <item name="app_name" type="id" />
   <item name="app_icon" type="id" />
+  <item name="recycler_view" type="id" />
 </resources>
