Retrieving size for all installed applications

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,5 +1,6 @@
 <resources>
   <item name="app_name" type="id" />
+  <item name="app_size" type="id" />
   <item name="app_icon" type="id" />
   <item name="recycler_view" type="id" />
 </resources>
