--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#607D8B</color>
-  <color name="colorPrimaryDark">#455A64</color>
-  <color name="colorAccent">#FF5252</color>
-
+  <color name="primary">#607D8B</color>
+  <color name="primary_dark">#455A64</color>
+  <color name="accent">#709E9E9E</color>
   <color name="primary_text">#212121</color>
   <color name="secondary_text">#727272</color>
   <color name="icons">#FFFFFF</color>
