--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,5 +2,6 @@
   <item name="app_name" type="id" />
   <item name="app_size" type="id" />
   <item name="app_icon" type="id" />
+  <item name="toolbar" type="id" />
   <item name="recycler_view" type="id" />
 </resources>
