--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,24 @@
-<resources>
-
+<resources xmlns:tools="http://schemas.android.com/tools">
   <!-- Base application theme. -->
-  <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-    <!-- Customize your theme here. -->
+  <style name="AppTheme" parent="AppTheme.Base"/>
+
+  <style name="AppTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
     <item name="colorPrimary">@color/primary</item>
     <item name="colorPrimaryDark">@color/primary_dark</item>
     <item name="colorAccent">@color/accent</item>
+    <!-- to remove the default action -->
+    <item name="windowNoTitle">true</item>
+    <item name="android:windowNoTitle">true</item>
+    <item name="windowActionBar">false</item> <!-- For 2.x version -->
+    <item name="android:windowActionModeOverlay">true</item>
+    <!-- app background color -->
+    <!--<item name="android:windowBackground">@color/primary</item>-->
+  </style>
+
+  <style name="ToolbarThemeLightText" parent="AppTheme">
+    <item name="android:textColorPrimary">@android:color/white</item>
+    <item name="actionMenuTextColor">@android:color/white</item>
+    <item name="android:textColorSecondary">@android:color/white</item>
   </style>
 
   <style name="ProgressDialog" parent="Theme.AppCompat.Dialog">
