--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
 
   <dimen name="item_row_margin">8dp</dimen>
   <dimen name="app_icon_width">48dp</dimen>
+
+  <dimen name="touch_raise">0dp</dimen>
 </resources>
