Clearing selected item state values when action mode is destroyed

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,10 +15,10 @@
     <!-- app background color -->
     <!--<item name="android:windowBackground">@color/primary</item>-->
     <!-- Sets the color of the CAB -->
-    <item name="actionModeStyle">@style/LStyled.ActionMode</item>
+    <item name="actionModeStyle">@style/StyledActionMode</item>
   </style>
 
-  <style name="LStyled.ActionMode" parent="@style/Widget.AppCompat.ActionMode">
+  <style name="StyledActionMode" parent="@style/Widget.AppCompat.ActionMode">
     <item name="background">@color/color_action_mode_bg</item>
     <item name="actionMenuTextColor">@color/color_action_mode_text</item>
   </style>
