--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,13 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <!--android:backgroundTint="?attr/colorPrimary"-->
+        <!--app:popupTheme="@style/Theme.AppCompat.Light"-->
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="?attr/colorPrimary"
-            android:elevation="6dp"
-            app:popupTheme="@style/Theme.AppCompat.Light" />
+            android:elevation="6dp" />
 
     </android.support.design.widget.AppBarLayout>
 
