--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/action_uninstall"
-        android:title="@string/action_uninstall"
         android:icon="@drawable/ic_action_delete"
         android:orderInCategory="100"
+        android:title="@string/action_uninstall"
         app:showAsAction="ifRoom" />
 
 </menu>
