--- a/app/src/main/res/layout/app_item.xml
+++ b/app/src/main/res/layout/app_item.xml
@@ -15,15 +15,13 @@
             android:id="@+id/app_name"
             style="@style/TextAppearance.AppCompat.Medium"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/primary_text" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/app_size"
             style="@style/TextAppearance.AppCompat.Small"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/secondary_text" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
