--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -9,8 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <!--android:backgroundTint="?attr/colorPrimary"-->
-        <!--app:popupTheme="@style/Theme.AppCompat.Light"-->
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -27,7 +25,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:scrollbars="vertical" />
 
     </LinearLayout>
 
