--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -4,7 +4,8 @@
 
     <item
         android:id="@+id/action_uninstall"
-        android:icon="@drawable/ic_action_delete"
+        android:icon="@drawable/ic_delete_black_24dp"
+        android:iconTint="@color/white"
         android:title="@string/action_uninstall"
         app:showAsAction="ifRoom" />
 
