--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#607D8B</color>
-    <color name="primary_dark">#455A64</color>
-    <color name="accent">#709E9E9E</color>
+
+    <color name="primary">#2b2b2b</color>
+    <color name="primary_dark">#181817</color>
+    <color name="accent">@color/red</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
-    <color name="icons">#FFFFFF</color>
-    <color name="divider">#B6B6B6</color>
+    <color name="icons">#ffffff</color>
+    <color name="divider">#b6b6b6</color>
 
-    <color name="transparent">#00000000</color>
     <color name="color_action_mode_bg">@color/primary</color>
     <color name="color_action_mode_text">@android:color/white</color>
+
+    <color name="transparent">#00000000</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="gray">#444442</color>
+    <color name="green">#89c624</color>
+    <color name="red">#ee4444</color>
+    <color name="blue">#4e76c9</color>
+    <color name="gold">#c29f37</color>
+
 </resources>
