--- a/app/src/main/res/layout/app_item.xml
+++ b/app/src/main/res/layout/app_item.xml
@@ -34,13 +34,15 @@
             style="@style/TextAppearance.AppCompat.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="@string/installation_date" />
+            android:textSize="12sp"
+            tools:text="4 days ago" />
 
         <TextView
             android:id="@+id/app_size"
             style="@style/TextAppearance.AppCompat.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="12sp"
             android:visibility="gone"
             tools:text="35 MB" />
 
