--- a/app/src/main/res/layout/app_item.xml
+++ b/app/src/main/res/layout/app_item.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             tools:text="Google Play Music" />
 
-        <TextView
+        <com.ddiehl.timesincetextview.TimeSinceTextView
             android:id="@+id/installation_date"
             style="@style/TextAppearance.AppCompat.Small"
             android:layout_width="wrap_content"
