--- a/app/src/main/res/layout/app_item.xml
+++ b/app/src/main/res/layout/app_item.xml
@@ -29,18 +29,20 @@
             android:layout_height="wrap_content"
             tools:text="Google Play Music" />
 
-        <TextView
+        <com.ddiehl.timesincetextview.TimeSinceTextView
             android:id="@+id/installation_date"
             style="@style/TextAppearance.AppCompat.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="@string/installation_date" />
+            android:textSize="12sp"
+            tools:text="4 days ago" />
 
         <TextView
             android:id="@+id/app_size"
             style="@style/TextAppearance.AppCompat.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="12sp"
             android:visibility="gone"
             tools:text="35 MB" />
 
